namespace ClearEyeQ.Scan.Domain.Enums;

public enum ScanStatus
{
    Initiated,
    Capturing,
    Processing,
    Completed,
    Failed
}
